Completed rest message controller
